package data;

option java_package = "nhl.containing.managmentinterface.data";
option java_outer_classname = "ContainerProtos";

message ContainerGraphData{	
		required ContainerCategory category = 1;
		required int32 aantal = 2;
	}

message ContainerGraphList{
	
	repeated ContainerGraphData containers = 1;
}

message ContainerDataList{
	repeated ContainerDataListItem items = 1;
}

message ContainerInfo{
	required int32 ID = 1;
	required int64 binnenkomstDatum = 2;
	required ContainerCategory vervoerBinnenkomst = 3;
	required string aanvoerMaatschappij = 4;
	required string eigenaar = 5;
	required int64 vertrekDatum = 6;
	required ContainerCategory vervoerVertrek = 7;
	required string afvoerMaatschappij = 8;
	required int32 gewichtLeeg = 9;
	required int32 gewichtVol = 10;
	required string inhoud = 11;
	
}

message ContainerDataListItem{
	required int32 ID = 1;
	required string eigenaar = 2;
	required ContainerCategory category = 3;
}

enum ContainerCategory{
	TRAIN = 0;
	TRUCK = 1;
	SEASHIP = 2;
	INLINESHIP = 3;
	STORAGE = 4;
	AGV = 5;
	REMAINDER = 6;
}